# AlphaFinder

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt
.devcontainer/: devcontainer.json
data/: universe_sample.csv
docker/: Dockerfile  docker-compose.yml
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  ROADMAP.md  SCORING.md
scripts/: backtest_strategy.py  collect_fundamentals.py  collect_prices.py  run_daily_pipeline.py
src/stock_scout/: cli.py  config.py  ingest.py  logging.py  universe.py
src/stock_scout/ai/: __init__.py  dataset.py  predict.py  train.py
src/stock_scout/alerts/: __init__.py  discord.py  telegram.py
src/stock_scout/analysis/: __init__.py  features.py  indicators.py  scoring.py  signals.py
src/stock_scout/dashboard/: streamlit_app.py
src/stock_scout/db/: __init__.py  engine.py  models.py  repositories.py
src/stock_scout/providers/: __init__.py  alphavantage_provider.py  base.py  factory.py  kite_provider.py  nsepython_provider.py  yfinance_provider.py
